Limit .my-places-menu width to 250 instead of 350px – prevents a vertical scrollbar in edge-cases where the menu contains items with longer names while the current user-name is relatively short (e. g. "Test Test").

--- a/docroot/_diffs/sass/custom.sass
+++ b/docroot/_diffs/sass/custom.sass
@@ -19,6 +19,9 @@ $default-box-shadow-color: rgba($copy, 0.2)
 
 @import "partials/dockbar"
 
+.my-places-menu
+  max-width: 250px
+
 body,
 html
   font-family: sans-serif
